content added to site and text formatted

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
   </head>
   <body style="font-size: 0px;">
     <div class="title">
+      Why You Need to Get More Calcium
     </div>
     <div class="navigation">
     </div>
     <div class="main">
       <img id="doot" src="doot_doot.gif">
-        <p>ddddddd ddddddddddddd dddddddddddddddddddddd dddddddddddddd dddddddddddddddd ddddddddddddddddddd dddddddd ddddddddddd ddddddddddd dddddddddddddddddddddd ddddddd ddddddddddddd dddddddddddddddddddddd dddddddddddddd dddddddddddddddd ddddddddddddddddddd dddddddd ddddddddddd ddddddddddd dddddddddddddddddddddd ddddddd ddddddddddddd dddddddddddddddddddddd dddddddddddddd dddddddddddddddd ddddddddddddddddddd dddddddd ddddddddddd ddddddddddd dddddddddddddddddddddd ddddddd ddddddddddddd dddddddddddddddddddddd dddddddddddddd dddddddddddddddd ddddddddddddddddddd dddddddd ddddddddddd ddddddddddd dddddddddddddddddddddd ddddddd ddddddddddddd dddddddddddddddddddddd dddddddddddddd dddddddddddddddd ddddddddddddddddddd dddddddd ddddddddddd ddddddddddd dddddddddddddddddddddd ddddddd ddddddddddddd dddddddddddddddddddddd dddddddddddddd dddddddddddddddd ddddddddddddddddddd dddddddd ddddddddddd ddddddddddd dddddddddddddddddddddd ddddddd ddddddddddddd dddddddddddddddddddddd dddddddddddddd dddddddddddddddd ddddddddddddddddddd dddddddd ddddddddddd ddddddddddd dddddddddddddddddddddd
-        </p>
+        <p> Every uear millions of Americans cause damage to their skeleton
+          by not getting enough calcium (maybe,) A lot of this damage is
+          (probably) preventable by simply ingesting more calcium. Keep your bones
+          strong with a a helthy supply of milk. If you don't, your skeleton may
+          decide to take its revenge...
+        </P>
     </div>
     <script src="script.js"></script>
   </body>
