added more text and corrected spelling

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
   </head>
   <body style="font-size: 0px;">
     <div class="title">
-      Why You Need to Get More Calcium
+      <h1>Why You Need to Get More Calcium</h1>
     </div>
     <div class="navigation">
     </div>
     <div class="main">
       <img id="doot" src="doot_doot.gif">
-        <p> Every uear millions of Americans cause damage to their skeleton
+        <p> Every year millions of Americans cause damage to their skeleton
           by not getting enough calcium (maybe,) A lot of this damage is
           (probably) preventable by simply ingesting more calcium. Keep your bones
           strong with a a helthy supply of milk. If you don't, your skeleton may
-          decide to take its revenge...
+          decide to take its revenge... But for real osteoporosis is no laughing
+          matter and can be quite the debilitating disease. Get your calcium
+          now, before it's too late.
         </P>
     </div>
     <script src="script.js"></script>
