--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>
-      Skelington Army
+      Protect your bones
     </title>
 
   </head>
