added alt image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="navigation">
     </div>
     <div class="main">
-      <img id="doot" src="doot_doot.gif">
+      <img id="doot" src="doot_doot.gif" alt="alt_frown.jpg">
         <p> Every year millions of Americans cause damage to their skeleton
           by not getting enough calcium (maybe,) A lot of this damage is
           (probably) preventable by simply ingesting more calcium. Keep your bones
